feat: add paginated response to service and controller